add fcm services and pushing data to server

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.google.code.findbugs'
     })
 
     compile 'com.android.support:multidex:1.0.1'
@@ -41,6 +42,8 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-storage:2.0.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.0'
+    compile 'com.basgeekball:awesome-validation:2.0'
+    compile group: 'com.google.guava', name: 'guava', version: '22.0-android'
     testCompile 'junit:junit:4.12'
     implementation 'com.android.support:support-v4:25.4.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
