--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'com.android.support:support-v4:25.4.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.firebase:firebase-storage:11.0.1'
+    implementation 'com.android.support:cardview-v7:25.4.0'
+    implementation 'com.android.support:recyclerview-v7:25.4.0'
     implementation 'com.google.firebase:firebase-auth:11.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
