--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -48,5 +49,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:25.4.0'
     implementation 'com.android.support:recyclerview-v7:25.4.0'
     implementation 'com.google.firebase:firebase-auth:11.0.1'
+    implementation 'com.android.support:support-vector-drawable:25.4.0'
+    implementation 'com.android.support:preference-v7:25.4.0'
+    implementation 'com.android.support:preference-v14:25.4.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
